fix: implemented overflow hidden in carouselWidth div and changed width of carousel div

--- a/src/components/MainCarousel/style.css
+++ b/src/components/MainCarousel/style.css
@@ -1,5 +1,5 @@
 .carousel {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,6 +16,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   padding: 0 48px;
+  overflow: hidden;
 }
 
 .carousel-control {
